--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -1,231 +1,113 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<include file="public@head"/>
-	</head>
-	<body>
-		<div id="solution">
-			<div class="index-banner index-banner-top" style="width:100%;">
-				<img src="__TMPL__/public/assets/style/img/solution/banner.png" class="hidden-xs index-banner-img" />
-				<img src="__TMPL__/public/assets/style/img/banner/moble_3.png" class="hidden-lg hidden-md hidden-sm index-banner-img" />
-				<div class="solution_banner_text_one">制造业外包服务解决方案</div>
-				<div class="solution_banner_text_two">不招人不管人通过商务合作完成生产订单</div>
-			</div>
-			<div class="bgc solution">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">面临的问题</div>
-					</div>
-					<div class="row solution-question">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item">
-								<img src="__TMPL__/public/assets/style/img/solution/question_1.png" />
-								<div class="text-center">管理成本高</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item">
-								<img src="__TMPL__/public/assets/style/img/solution/question_2.png" />
-								<div class="text-center">团队组建难</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item">
-								<img src="__TMPL__/public/assets/style/img/solution/question_3.png" />
-								<div class="text-center">专业化水平较低</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item">
-								<img src="__TMPL__/public/assets/style/img/solution/question_4.png" />
-								<div class="text-center">员工素质不一</div>
-							</div>
-						</div>
-					</div>
+<head>
+    <include file="public@head"/>
+</head>
+<body>
+<div id="solution" class="solution">
+	<!-- 头部图片 -->
+    <div class="banner">
+        <div class="solution_banner_text_one">制造业外包服务解决方案</div>
+        <div class="solution_banner_text_two">不招人不管人通过商务合作完成生产订单</div>
+    </div>
+	<!-- 方案定位 -->
+    <div class="plan">
+        <div class="title">方案定位</div>
+        <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+        <div class="content">
+            <div class="content_left">企业与其人力公司建立合作关系，把岗位或产线部分或全部外包。人力公司自行招募劳动者、培训上岗并自主经营管理，从而降低企业成本，提高效能，降低用工风险，增强企业自身竞争力。企业与其人力公司建立合作关系，把岗位或产线部分或全部外包。人力公司自行招募劳动者、培训上岗并自主经营管理，从而降低企业成本，提高效能，降低用工风险，增强企业自身竞争力。企业与其人力公司建立合作关系，把岗位或产线部分或全部外包。人力公司自行招募劳动者、培训上岗并自主经营管理，从而降低企业成本，提高效能，降低用工风险，增强企业自身竞争力。</div>
+            <img src="__TMPL__/public/assets/style/img/solution/plan.png" alt="">
+        </div>
+    </div>
+	<!-- 服务目标 -->
+	<div class="target">
+	    <div class="title">服务目标</div>
+	    <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+		<div class="target_list">
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+			    <div class="content">
+					<div class="content_top">安心无忧全托管</div>
+					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
-			<div class="bg solution">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">我们的解决方案</div>
-					</div>
-					<div class="row solution-product">
-						<div class="hidden-xs col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="solution-product-item">
-								<img src="__TMPL__/public/assets/style/img/solution/solution_product.png" class="solution-product-item-img" />
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<ul class="solution-product-item">
-								<li class="active">
-									<p class="solution-product-item-title">国企物业公司保洁用工解决方案</p>
-									<p class="solution-product-item-text2">查看更多</p>
-									<div class="solution-product-item-text">
-										<p>采用外包的模式把保洁业务领域的人力资源事务进行外包，整个人力资源招、陪、育、留、退、价值实现全生命周期服务，解决季节用工、订单波动、冗余和紧缺并存、隐形成本防不胜防、社保稽查，缴费基数无法规避的各种人力资源风险，实现国企物业公司遵守国家法律、解决劳资纠纷，消灭物业公司的潜在用工风险。</p>
-										<p>外包对国企物业公司的价值：</p>
-										<p>1.管理提升：管理直线化让给你企业更加专注核心，让岗位效率提升；关注结果而非过程减少了管理成本，解除劳动关系束缚更加灵活可控。</p>
-										<p>2.成本控制：结果管理使管理成本下降，灵活的用人安排不多付出成本，外包转移了政府监管成本，同时解除劳动关系风险成本转移。</p>
-										<p>3.财务优化：财报优化，减少了员工基数，单体利润率提升，规避社保稽查，以采购费入账，经营科目为采购成本（含增值税）；同时企业人均单体效能提升能耗降低，做好资本故事，让审核和监管合规、规范。</p>
-										<p>4.风险控制：社保稽核风险转移，第三方全面承接和担责；劳资纠纷、工伤责任、经济责任由第三方全面承接和支付，三期员工的薪资社保第三方承接并按需替换符合保洁工作的人员工作。</p>
-									</div>
-									<!-- <div class="yuyue-btn text-center">
-										<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
-									</div> -->
-								</li>
-								<li>
-									<p class="solution-product-item-title">人员招聘外包解决方案</p>
-									<p class="solution-product-item-text2">查看更多</p>
-									<div class="solution-product-item-text">
-										<p>中洁清洁服务有限公司依托华劳集团14年人力资源外包经验，依靠本身的海量的人才储备、庞大的招聘渠道（全媒体招聘运营能力）、优秀的寻访能力、专业的甄选方法和经验，有效缩短企业招聘周期，提高招聘效率，同时降低招聘成本。</p>
-										<p>招聘外包（RPO）整个流程是指从确定职位描述，到分析用人理念、职位需求、与用人部门负责人沟通，筛选简历，人才测评，面试到录用通知，直至候选人报到的所有环节。</p>
-										<p>价值体现：</p>
-										<p>1.按效果付费。公司招聘团队的组建，人员的管理，渠道的投入 都是前期的投入成本。采用招聘外包（RPO）可以有效降低团队前期和过程中产生的管理和运营费用，按照实际招聘到岗的人员进行付费。</p>
-										<p>2.降低人力资源部门招聘压力。物业公司的不断发展，业务的不断扩大必定导致员工的大量流动，这一流动以企业中低层保洁岗位的人员为主，这一较为庞大的群体不定期但频繁的流动给企业人力资源部门带来了较多的事务性工作和不确定工作，中洁清洁公司招聘外包就可以通过公司自身内部资源的合理整合，在控制总体成本的同时为公司提供合适的人才。</p>
-										<p>3.灵活性及安全性。中洁清洁可以提供定制化解决方案且凭借自己可靠的行业经验，可依据企业的具体需求及经营计划，制订和优化招聘流程及后续服务，以客户期望的招聘速度及规模由小而大，降低风险，稳步前进，不断满足企业计划性或是临时性的人员需求。</p>
-									</div>
-									<!-- <div class="yuyue-btn text-center">
-										<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
-									</div> -->
-								</li>
-								<li>
-									<p class="solution-product-item-title">员工工伤外包解决方案</p>
-									<p class="solution-product-item-text2">查看更多</p>
-									<div class="solution-product-item-text">
-										<p>1.转移劳动关系，规避社保稽查风险。社保入税后企业成本优化的终极之选，解决发工资未缴社保，工资额高于社保基数等风险，实现劳动关系的全面转移。劳务费发票替代工资表，实现公司人员真空化。</p>
-										<p>2.工伤0风险全面解决。工伤类事务性工资全面承接；做工伤事物处理的甩手掌柜。工伤事故处理费用100%全部承担，企业零成本解决工伤风险。</p>
-									</div>
-									<!-- <div class="yuyue-btn text-center">
-										<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
-									</div> -->
-									<!-- <p class="solution-product-item-bottom-text">
-										<a href="{:cmf_url('portal/Form/index')}" title="查看更多">查看更多</a>
-									</p> -->
-								</li>
-							</ul>
-						</div>
-					</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+			    <div class="content">
+					<div class="content_top">安心无忧全托管</div>
+					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
-			<div class="bgc solution">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">我们的优势</div>
-					</div>
-					<div class="row solution-advantage">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item flex-box">
-								<img src="__TMPL__/public/assets/style/img/solution/advantage/1.png" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-right">
-									<div class="solution-advantage-item-right-title">员工素质高</div>
-									<div class="solution-advantage-item-right-text">教育和培训员工素质，消除保洁人员专业水平低的难点</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item flex-box">
-								<img src="__TMPL__/public/assets/style/img/solution/advantage/2.png" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-right">
-									<div class="solution-advantage-item-right-title">专业水平高</div>
-									<div class="solution-advantage-item-right-text">针对不同保洁工作的难点，采取有效应对措施</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item flex-box">
-								<img src="__TMPL__/public/assets/style/img/solution/advantage/3.png" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-right">
-									<div class="solution-advantage-item-right-title">管理风险小</div>
-									<div class="solution-advantage-item-right-text">转移了因保洁员工伤、社保而带来的成本，专业由此带来的法律责任</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item flex-box">
-								<img src="__TMPL__/public/assets/style/img/solution/advantage/4.png" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-right">
-									<div class="solution-advantage-item-right-title">节省设备购置费用</div>
-									<div class="solution-advantage-item-right-text">减少保洁工作需要的设备采购成本、管理成本、维护成本等</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item flex-box">
-								<img src="__TMPL__/public/assets/style/img/solution/advantage/5.png" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-right">
-									<div class="solution-advantage-item-right-title">突击工作的机动性强</div>
-									<div class="solution-advantage-item-right-text">外包保洁公司考核更严格，组织结构更紧密，执行力较强</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item flex-box">
-								<img src="__TMPL__/public/assets/style/img/solution/advantage/6.png" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-right">
-									<div class="solution-advantage-item-right-title">经验丰富</div>
-									<div class="solution-advantage-item-right-text">公司管理经验丰富、员工工作经验丰富</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row about2 text-center">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 about2-item">
-							<div class="about-num"><span id="serviceTeam">1000</span>+</div>
-							<div class="about-text">服务团队</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 about2-item">
-							<div class="about-num"><span id="serviceCity">400</span>+</div>
-							<div class="about-text">服务城市</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 about2-item">
-							<div class="about-num"><span id="serviceCompany">3000</span>+</div>
-							<div class="about-text">服务企业</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 about2-item">
-							<div class="about-num"><span id="serviceSatisfaction">99.8</span>%</div>
-							<div class="about-text">客户满意度</div>
-						</div>
-					</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+			    <div class="content">
+					<div class="content_top">安心无忧全托管</div>
+					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
-			<div class="bg">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<p>合作客户</p>
-						<p></p>
-						<p>COOPERATIVE CUSTOMERS</p>
-					</div>
-					<ul class="customers-box">
-						<li><img src="__TMPL__/public/assets/style/img/customers/1.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/2.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/3.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/4.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/5.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/6.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/7.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/8.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/9.png" class="customers-img" /></li>
-						<li><img src="__TMPL__/public/assets/style/img/customers/10.png" class="customers-img" /></li>
-						<!-- <links>
-						    <li>
-						        <a href="{$vo.url|default=''}" target="{$vo.target|default=''}">
-						            <img alt="{$vo.name|default=''}" src="{:cmf_get_image_url($vo.image)}" class="customers-img">
-						        </a>
-						    </li>
-						</links> -->
-					</ul>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+			    <div class="content">
+					<div class="content_top">安心无忧全托管</div>
+					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
 		</div>
-		
-		
-		<include file="public@footer"/>
-	</body>
-	<script type="text/javascript">
-		$(function(){
-			$(".solution-product-item li").mouseover(function(){
-				$(".solution-product-item li").removeClass("active");
-				$(this).addClass("active");
-			})
-		})
-	</script>
+	</div>
+	<!-- 服务内容 -->
+	<div class="substance">
+		<div class="title">服务目标</div>
+		<div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+		<div class="substance_list">
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/substance1.png" alt="">
+			    <div class="content">
+					生产流程外包
+				</div>
+			</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/substance2.png" alt="">
+			    <div class="content">
+					检测检验外包
+				</div>
+			</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/substance3.png" alt="">
+			    <div class="content">
+					仓储物流外包
+				</div>
+			</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/substance4.png" alt="">
+			    <div class="content">
+					技术蓝领外包
+				</div>
+			</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/substance5.png" alt="">
+			    <div class="content">
+					辅助部门外包
+				</div>
+			</div>
+			<div class="item">
+				<img src="__TMPL__/public/assets/style/img/solution/substance6.png" alt="">
+			    <div class="content">
+					制造整体外包
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<include file="public@footer"/>
+</body>
+<script type="text/javascript">
+    $(function () {
+        $(".solution-product-item li").mouseover(function () {
+            $(".solution-product-item li").removeClass("active");
+            $(this).addClass("active");
+        })
+    })
+</script>
 </html>
