--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -16,7 +16,7 @@
         <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
         <div class="content">
             <div class="content_left">企业与其人力公司建立合作关系，把岗位或产线部分或全部外包。人力公司自行招募劳动者、培训上岗并自主经营管理，从而降低企业成本，提高效能，降低用工风险，增强企业自身竞争力。企业与其人力公司建立合作关系，把岗位或产线部分或全部外包。人力公司自行招募劳动者、培训上岗并自主经营管理，从而降低企业成本，提高效能，降低用工风险，增强企业自身竞争力。企业与其人力公司建立合作关系，把岗位或产线部分或全部外包。人力公司自行招募劳动者、培训上岗并自主经营管理，从而降低企业成本，提高效能，降低用工风险，增强企业自身竞争力。</div>
-            <img src="__TMPL__/public/assets/style/img/solution/plan.png" alt="">
+            <img src="__TMPL__/public/assets/style/imgs/solution/plan.png" alt="">
         </div>
     </div>
 	<!-- 服务目标 -->
@@ -25,28 +25,28 @@
 	    <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
 		<div class="target_list">
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
 			    <div class="content">
 					<div class="content_top">安心无忧全托管</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
 			    <div class="content">
 					<div class="content_top">安心无忧全托管</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
 			    <div class="content">
 					<div class="content_top">安心无忧全托管</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/target1.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/target1.png" alt="">
 			    <div class="content">
 					<div class="content_top">安心无忧全托管</div>
 					<div class="content_des">将企业非核心业务交给专业的外包服务商，由外包服务商提供专业的人事管理与生产制造服务，从而降低成本、提高效率、增强自身的竞争力。</div>
@@ -56,41 +56,41 @@
 	</div>
 	<!-- 服务内容 -->
 	<div class="substance">
-		<div class="title">服务目标</div>
+		<div class="title">服务内容</div>
 		<div class="tag">持续不断为客户提供具有价值的产品和服务</div>
 		<div class="substance_list">
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/substance1.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/substance1.png" alt="">
 			    <div class="content">
 					生产流程外包
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/substance2.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/substance2.png" alt="">
 			    <div class="content">
 					检测检验外包
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/substance3.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/substance3.png" alt="">
 			    <div class="content">
 					仓储物流外包
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/substance4.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/substance4.png" alt="">
 			    <div class="content">
 					技术蓝领外包
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/substance5.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/substance5.png" alt="">
 			    <div class="content">
 					辅助部门外包
 				</div>
 			</div>
 			<div class="item">
-				<img src="__TMPL__/public/assets/style/img/solution/substance6.png" alt="">
+				<img src="__TMPL__/public/assets/style/imgs/solution/substance6.png" alt="">
 			    <div class="content">
 					制造整体外包
 				</div>
