--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -7,60 +7,38 @@
 		<include file="public@head" />
 	</head>
 	<body>
-		<div style="position: relative;">
+		<div class="index">
 			<div class="index-banner index-banner-top">
-				<img src="__TMPL__/public/assets/style/imgs/index/banner.png" />
-			</div>
-			<div class="hidden-lg hidden-md hidden-sm" style="padding: 0.5rem;">
-				<div class="row solution-1">
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-						<div class="solution-1-item">
-							<div class="solution-1-item-title">荣誉标杆 <img
-									src="__TMPL__/public/assets/style/img/icon-next.png" /></div>
-							<div class="solution-1-item-text">2022冬残奥会荣誉获得单位</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-						<div class="solution-1-item">
-							<div class="solution-1-item-title">强力支撑 <img
-									src="__TMPL__/public/assets/style/img/icon-next.png" /></div>
-							<div class="solution-1-item-text">华劳集团15年人力服务经验</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-						<div class="solution-1-item">
-							<div class="solution-1-item-title">雄厚实力 <img
-									src="__TMPL__/public/assets/style/img/icon-next.png" /></div>
-							<div class="solution-1-item-text">雄厚的专业化后勤保障体系</div>
-						</div>
-					</div>
+				<div>
+					<div class="title">15年深耕人力资源服务业</div>
+					<div class="text">服务上市公司29家和超千人企业83家</div>
 				</div>
 			</div>
-			<div style="width: 100%;background: #fff;border-bottom: solid 1px #FF5000;">
+			<div class="index-number" style="width: 100%;background: #fff;border-bottom: solid 1px #FF5000;">
 				<div class="inner">
-					<div class="row solution-3">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-							<div class="solution-3-item">
-								<div class="solution-3-item-title">2007年</div>
-								<div class="solution-3-item-text">集团始创于2007年</div>
+					<div class="row">
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+							<div class="item">
+								<div class="title">2007年</div>
+								<div class="text">集团始创于2007年</div>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-							<div class="solution-3-item">
-								<div class="solution-3-item-title">110000000</div>
-								<div class="solution-3-item-text">注册资本1.1亿</div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+							<div class="item">
+								<div class="title">110000000</div>
+								<div class="text">注册资本1.1亿</div>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-							<div class="solution-3-item">
-								<div class="solution-3-item-title">21+</div>
-								<div class="solution-3-item-text">业务范围覆盖21个省份</div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+							<div class="item">
+								<div class="title">21+</div>
+								<div class="text">业务范围覆盖21个省份</div>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-							<div class="solution-3-item">
-								<div class="solution-3-item-title">500000+</div>
-								<div class="solution-3-item-text">安置就业50余万人</div>
+						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
+							<div class="item">
+								<div class="title">500000+</div>
+								<div class="text">安置就业50余万人</div>
 							</div>
 						</div>
 					</div>
