--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -14,7 +14,7 @@
 					<div class="text">服务上市公司29家和超千人企业83家</div>
 				</div>
 			</div>
-			<div class="index-number" style="width: 100%;background: #fff;border-bottom: solid 1px #FF5000;">
+			<div class="index-number" style="width: 100%;background: #fff;border-bottom: solid 1px rgba(255, 80, 0, 0.2);">
 				<div class="inner">
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
@@ -135,7 +135,7 @@
 					<div class="inner-bigger-title text-center">
 						<p>一站式人力资源整体<span class="col">解决方案</span></p>
 					</div>
-					<div class="text-center" style="color: #999;font-size: 0.25rem;">持续不断为客户提供具有价值的产品和服务</div>
+					<div class="inner-small-title text-center">持续不断为客户提供具有价值的产品和服务</div>
 					<div class="index-solution-box">
 						<div class="flex-box">
 							<div class="index-solution-box-left">
@@ -236,7 +236,7 @@
 						<div class="inner-bigger-title text-center">
 							<p>发展历程</p>
 						</div>
-						<div class="text-center" style="color: #999;font-size: 0.25rem;">持续不断为客户提供具有价值的产品和服务</div>
+						<div class="inner-small-title text-center">持续不断为客户提供具有价值的产品和服务</div>
 						<div class="flex-around">
 							<div class="index-history-box-left">
 								<div class="text">华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。</div>
@@ -313,7 +313,7 @@
 					<div class="inner-bigger-title text-center">
 						<p>我们的优势</p>
 					</div>
-					<div class="text-center" style="color: #999;font-size: 0.25rem;">持续不断为客户提供具有价值的产品和服务</div>
+					<div class="inner-small-title text-center">持续不断为客户提供具有价值的产品和服务</div>
 					<div class="index-advantage-box">
 						<div class="index-advantage-box-top">
 							<div class="item">
@@ -367,7 +367,7 @@
 					<div class="inner-bigger-title text-center">
 						<p>华劳动态</p>
 					</div>
-					<div class="text-center" style="color: #999;font-size: 0.25rem;">华劳集团公司新闻、人力资源行业动态</div>
+					<div class="inner-small-title text-center">华劳集团公司新闻、人力资源行业动态</div>
 					<div class="index-news-box">
 						<div class="item">
 							<div class="title-bigger" style="background: url(__TMPL__/public/assets/style/imgs/index/news/1.png) center center no-repeat;background-size: 100% 100%;">
@@ -422,7 +422,7 @@
 					<div class="inner-bigger-title text-center">
 						<p>1600+家企业的信赖</p>
 					</div>
-					<div class="text-center" style="color: #999;font-size: 0.25rem;">深耕人力资源服务业，为企业提供更优质的服务</div>
+					<div class="inner-small-title text-center">深耕人力资源服务业，为企业提供更优质的服务</div>
 					<div class="index-customer-box">
 						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
 						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
