--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -51,42 +51,7 @@
 			<div>
 				<ul class="nav navbar-nav">
 				    <li data-url = "index"><p><a href="{:cmf_url('portal/Index/index')}" title="首页">首页</a></p></li>
-					<li data-url = "product">
-						<p><a href="javascript:;" title="产品服务">产品服务</a></p>
-						<div class="menu-dropdown" id="menu-dropdown-1">
-							<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
-								<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
-									<div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"  style="height:100%">
-										<ul class="nav-item-title">
-											<li class="title-active">解决方案</li>
-											<li>产品服务</li>
-										</ul>
-										<ul class="nav-item-text" style="height:100%;border-left: solid 1px #e6e6e6;">
-											<li class="nav-item-text-list text-active">
-												<ul class="nav-item-text-item flex-box">
-													<li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" title="国企和上市物业公司保洁用工解决方案">国企和上市物业公司保洁用工解决方案</a></li>
-													<li><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" title="保洁用工风险解决方案">保洁用工风险解决方案</a></li>
-													<li><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" title="保洁人员招聘外包解决方案">保洁人员招聘外包解决方案</a></li>
-												</ul>
-											</li>
-											<li class="nav-item-text-list">
-												<ul class="nav-item-text-item flex-box">
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>1))}" title="政府清洁">政府清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>2))}" title="酒店清洁">酒店清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>3))}" title="学校清洁">学校清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>4))}" title="医院清洁">医院清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>5))}" title="写字楼清洁">写字楼清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>6))}" title="工业园区清洁">工业园区清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>7))}" title="城市环境清洁">城市环境清洁</a></li>
-													<li><a href="{:cmf_url('portal/Service/index',array('id'=>8))}" title="商场清洁">商场清洁</a></li>
-												</ul>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</li>
+					<li data-url = "product"><p><a href="{:cmf_url('portal/Product/index')}" title="产品服务">产品服务</a></p></li>
 				    <li data-url = "solution"><p><a href="{:cmf_url('portal/Solution/index')}" title="解决方案">解决方案</a></p></li>
 				    <li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p></li>
 					<li data-url = "news"><p><a href="{:cmf_url('portal/News/index')}" title="合伙人计划">合伙人计划</a></p></li>
